<resources>
    <string name="app_name">My Baby Care</string>
    <string name="action_settings">Settings</string>

    <string name="btn_shop_list">Shopping List</string>
    <string name="btn_check_list">Check List</string>
    <string name="btn_sleep_guide">Sleep Guide</string>
    <string name="btn_baby_photos">Photos</string>
    <string name="btn_calendar">Calendar</string>

    <string name = "btn_add_new_item">Add new items</string>
    <string name = "btn_search_existing">Search for existing items</string>
    <string name = "btn_favorites">Favorites</string>

    <string name = "tv_prod_name">Product Name</string>
    <string name = "tv_category">Category</string>
    <string name = "tv_brand">Brand</string>
    <string name = "tv_item_count">Item Count</string>
    <string name = "tv_purchase_date">Purchase Date</string>
    <string name = "tv_expiry_date">Expiry Date</string>
    <string name = "tv_store_location">Store Location</string>
    <string name = "tv_reminder">Need a Reminder?</string>
    <string name = "tv_favorites">Add to favorites?</string>
    <string name = "btn_add">Add</string>

    <string name="btn_store_location">Select Store</string>
    <string name="title_activity_store_location">Map</string>
    <string name="category">Category:</string>
    <string name="itemCount">Item Count:</string>
    <string name="edit">Edit</string>
    <string name="by">By</string>
    <string name="share">Share this Item</string>

    <string name="tv_eventName">Event Name</string>
    <string name="tv_eventDate">Event Date</string>
    <string name="tv_eventDetails">Event Details</string>

    <string name="btn_addEvent">Add New Event</string>
    <string name="btn_viewEvents">View Existing Events</string>
    <string name="btn_savePhoto">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_photoCaption">Photo Caption</string>

    <!--  BluetoothChat -->
    <string name="send">Share Selected Item</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="train_voice">Train Baby\'s Voice</string>
    <string name="add_lullabies">Add Lullabies</string>
    <string name="naptime">Start Naptime</string>
    <string name="doneTraining">DONE</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
</resources>
