<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_captured"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_memory"
        android:layout_below="@+id/img_captured"
        android:layout_alignLeft="@+id/img_captured"
        android:layout_alignStart="@+id/img_captured"
        android:layout_marginTop="61dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="#ff000000"
        android:text="@string/tv_photoCaption" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_Memory"
        android:layout_alignBottom="@+id/tv_memory"
        android:layout_toRightOf="@+id/tv_memory"
        android:layout_alignRight="@+id/img_captured"
        android:layout_alignEnd="@+id/img_captured" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_savePhoto"
        android:id="@+id/btn_savePhoto"
        android:layout_marginTop="49dp"
        android:background="#ffcfce52"
        android:textStyle="bold"
        android:layout_below="@+id/et_Memory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:id="@+id/btn_cancel"
        android:background="#ffcfce52"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btn_savePhoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="49dp"
        android:layout_marginEnd="49dp" />
</RelativeLayout>
