<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkProdId"
                android:layout_column="1"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="productName"
                android:id="@+id/textViewProdName"
                android:layout_alignBottom="@+id/textViewBrandName"
                android:layout_below="@+id/imageViewFavorite"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_column="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by"
                android:id="@+id/lblbrandBy"
                android:layout_column="12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="brand"
                android:id="@+id/textViewBrandName"
                android:layout_toRightOf="@+id/textViewProdName"
                android:layout_column="14" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:id="@+id/lblCategory"
                android:layout_column="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCategory"
                android:layout_column="8" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imageViewFavorite"
                android:src="@drawable/favorites_icon"
                android:layout_column="11" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemCount"
                android:id="@+id/lblItemCount"
                android:layout_column="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textViewItemCount"
                android:layout_column="8" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>
    </TableLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnItemEdit"
        android:layout_column="2"
        android:textSize="@dimen/text_size_small"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffcfce52" />

</RelativeLayout>