<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_eventName"
        android:id="@+id/tv_eventName"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:textColor="#ff0d6f0e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_eventDate"
        android:id="@+id/tv_eventDate"
        android:layout_below="@+id/tv_eventName"
        android:layout_alignLeft="@+id/tv_eventName"
        android:layout_alignStart="@+id/tv_eventName"
        android:layout_marginTop="32dp"
        android:textColor="#ff0d6f0e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_eventDetails"
        android:id="@+id/tv_eventDetail"
        android:layout_below="@+id/tv_eventDate"
        android:layout_alignLeft="@+id/tv_eventDate"
        android:layout_alignStart="@+id/tv_eventDate"
        android:layout_marginTop="34dp"
        android:textColor="#ff0d6f0e"
        android:textStyle="bold" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_eventName"
        android:layout_above="@+id/tv_eventDate"
        android:layout_toRightOf="@+id/tv_eventName"
        android:layout_toEndOf="@+id/tv_eventName"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_eventDate"
        android:layout_alignBottom="@+id/tv_eventDate"
        android:layout_alignLeft="@+id/et_eventName"
        android:layout_alignStart="@+id/et_eventName" />
    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/img_eventDate"
        android:background="@drawable/download"
        android:layout_alignBottom="@+id/et_eventDate"
        android:layout_toRightOf="@+id/et_eventDate"
        android:layout_toEndOf="@+id/et_eventDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/et_eventDetail"
        android:layout_alignBottom="@+id/tv_eventDetail"
        android:layout_alignLeft="@+id/et_eventDate"
        android:layout_alignStart="@+id/et_eventDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:id="@+id/btn_addNewCheckList"
        android:textStyle="bold"
        android:background="#ffcfce52"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
